@@ -3,6 +3,7 @@
  * Lenient UTF-8 to UTF-16 transcoding by inserting replacement characters.
  * Adding more logging capabilities at the JNI level.
  * Added proper encryption support. NOTE: The key has been increased from 32 bytes to 64 bytes (see example).
+ * Throw NoSuchMethodError when RealmResults.indexOf() is called.
 
 0.76.0
  * RealmObjects can now be imported using JSON.
